# frame-generator

./: .gitignore  AGENTS.md  Cargo.toml  IMPROVEMENT_PLAN.md  README.md  What_to_do.md  flake.nix  flake.nix.back
.opencode/context/project-intelligence/: navigation.md  technical-domain.md
common/src/: lib.rs
data/keys/: key_log.csv
keyboard parser/: 1.py  key_log.csv  key_log.parquet  pyproject.toml
keys-recorder/: Cargo.toml
keys-recorder/src/: main.rs
model/: Cargo.toml
model-training/: Cargo.toml
model-training/src/: blocks.rs  csv_processing.rs  data.rs  images.rs  inference.rs  lib.rs  main.rs  model.rs  models.rs  modules.rs  training.rs  types.rs
model-training/src/models/: attention.rs  embedders.rs  mod.rs  noise_schedule.rs
model-training/src/models/baseline/: mod.rs  model.rs  training.rs
model-training/src/models/baseline/blocks/: attention.rs  mod.rs  my.rs
model-training/src/models/baseline/blocks/unet/: mod.rs
model-training/src/models/baseline_conv/: model.rs  training.rs
model-training/src/models/baseline_diffusion/: mod.rs  model.rs  training.rs
model-training/src/models/baseline_diffusion/blocks/: groupnorm.rs  my.rs  silu.rs
model-training/src/models/baseline_diffusion/blocks/autoencoder/: mod.rs
model-training/src/models/baseline_diffusion/blocks/unet/: mod.rs
model-training/src/models/edm/: blocks.rs  mod.rs
model-training/src/models/edm/diffusion/: denoiser.rs  diffusion_sampler.rs  inner_model.rs  mod.rs  utils.rs
model-training/src/models/model_v1/: model.rs  training.rs
model-training/src/models/model_v2/: model.rs  training.rs
model-training/src/models/trash/edm/: mod.rs
model-training/src/models/trash/edm/diffusion/: mod.rs  training.rs
model-training/src/models/trash/unet/: mod.rs
model-training/src/models/trash/unet/decoder/: mod.rs
model-training/src/models/trash/unet/decoder/unetplusplus/: decoder.rs
model-training/src/models/trash/unet/encoder/: mod.rs
model-training/src/models/trash/unet/encoder/resnet/: presets.rs  resnet.rs  weights.rs
model-training/src/models/unet/: blocks.rs  mod.rs  model.rs  training.rs
model-training/src/models/unet/decoder/unetplusplus/: conv2drelu.rs
model-training/src/models/unet/encoder/resnet/: block.rs
model-training/src/models/unets/: mod.rs
model-training/src/models/unets/base_unet/: mod.rs  model.rs  training.rs
model-training/src/models/vae/: mod.rs  model.rs
model-training/src/models/wgan/: mod.rs  model.rs  training.rs
model-training/tests/: training_test.rs
model/src/: csv_processing.rs  data.rs  images.rs  inference.rs  main.rs  model.rs  my_types.rs  training.rs  types.rs
nix/modules/: devshell.nix  pre-commit.nix  rust.nix
preprocessor/: Cargo.toml
preprocessor/src/: converter.rs  csv_processing.rs  hdf5_processing.rs  images.rs  lib.rs  main.rs  types.rs  videos.rs
recorder/: Cargo.toml
recorder/src/: keys_recorder.rs  lib.rs  main.rs  video_recorder.rs
src/: main.rs  main_old.txt  utils.rs
ui/: Cargo.toml
ui/src/: main.rs  utils.rs
ui_frames/: Cargo.toml
ui_frames/src/: main.rs  utils.rs
