[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { workspace = true }
# burn = { version = "0.16.0" }
iced = { version = "0.13.1", features = ["image"] }
image = "0.25.5"
model-training = { path = "model-training" }
recorder = { path = "recorder" }
preprocessor = { path = "preprocessor" }
common = { path = "common" }

[workspace]
members = [""]
# members = ["common", "model-training", "preprocessor", "recorder"]

[workspace.dependencies]
burn = { version = "0.16.0" }
