[package]
name = "ui"
description = "My Rust project using Nix"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { workspace = true }
# burn = { version = "0.16.0" }
# iced = { version = "0.13.1", features = ["image"] }
image = "0.25.5"
model-training = { path = "model-training" }
recorder = { path = "recorder" }
preprocessor = { path = "preprocessor" }
common = { path = "common" }
ratatui = "0.29.0"
crossterm = "0.29.0"
color-eyre = "0.6.3"
itertools = "0.14.0"
ratatui-image = { version = "5.0.0", features = ["crossterm"] }

[features]
default = []
wgpu = ["model-training/wgpu"]
cuda = ["model-training/cuda"]


[workspace]
members = [""]
# members = ["common", "model-training", "preprocessor", "recorder"]

[workspace.dependencies]
burn = { version = "0.17.0" }
