[tool.poetry]
name = "test1"
version = "0.1.0"
description = ""
authors = ["9i5BCrUcNX5NmT <machinima40@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pyarrow = "^18.1.0"
keyboard = "^0.13.5"
mouse = "^0.7.1"
pynput = "^1.7.7"
pandas = "^2.2.3"
pyautogui = "^0.9.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
