[package]
name = "model-training"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { workspace = true, features = ["train", "ndarray",  "wgpu"] }
csv = "1.3.1"
image = "0.25.5"
serde = { version = "1.0.216", features = ["derive"] }
common = {path = "../common"}
preprocessor = {path = "../preprocessor"}