[package]
name = "model-training"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.15.0", features = ["train", "wgpu"] }
csv = "1.3.1"
image = "0.25.5"
rdev = { version = "0.5.3", features = ["serialize"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.138"
