[package]
name = "preprocessor"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.5"
rayon = "1.10.0"
csv = "1.3.1"
serde = { version = "1.0.216", features = ["derive"] }
burn = { version = "0.16.0", default-features = false }
hdf5-metno = { version = "0.10.0", features= ["blosc-zstd"] }
model-training = { path = "../model-training" }