[package]
name = "ui"
version = "0.1.0"
edition = "2024"
default-run = "ui"

[dependencies]
burn = { workspace = true }
iced = { version = "0.13.1", features = ["image"] }
image = "0.25.5"
model-training = { path = "../model-training" }
recorder = { path = "../recorder" }
preprocessor = { path = "../preprocessor" }
common = {path = "../common"}